--- a/server/.env
+++ b/server/.env
@@ -2,10 +2,10 @@ PORT=4000
 
 
 PGUSER=postgres 
-  PGPASSWORD=AntorRay
+  PGPASSWORD=ILoveCoding2023
   PGHOST=localhost
   PGPORT=5432
-  PGDATABASE="digital bazar"
+  PGDATABASE="digital_bazar"
 
 
  JWT_SECRET_KEY=jklsafkjalsdfjasl
