--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "lucide-react": "^0.525.0",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "^5.0.1",
